# applied_groundwater_modelling

./: .flow_redesign_handoff.md  .gitignore  .lycheeignore  .pre-commit-config.yaml  .vscode-mcp.json  0_diagnostics.ipynb  0_sync_repo.ipynb  CITATION.cff  CLAUDE.md  DATA_AVAILABILITY.md  DEVELOPMENT.md  INSTRUCTOR_GUIDE.md  LICENSE  README.md  Test_louise  chapter_config.json  config_template.py  env.txt  environment_development.yml  environment_students.yml  pyproject.toml  requirements.txt  tasks_data.py  transport_planning.md
.claude/: context.md  workflow-capabilities.json
.serena/: project.yml
07_Exercises_Louise/: Exercise1.ipynb
ADDITIONNAL_MATERIAL/: explore_porosity_and_REV.ipynb  flopy3_grid_intersection_demo.ipynb
CASE_STUDY/: 0_introduction.ipynb  10_communication.ipynb  1_introduction.ipynb  1_perceptual_model.ipynb  2_modflow_fundamentals.ipynb  2_perceptual_model.ipynb  3_modflow_fundamentals.ipynb  4_model_implementation copy.ipynb  4_model_implementation.ipynb  4b_model_implementation.ipynb  4b_transport_model_implementation.ipynb  5_calibration.ipynb  6_validation.ipynb  7_sensitivity_uncertainty.ipynb  8_model_application.ipynb  9_documentation.ipynb  simplify_notebook.py
DEMOS/: 05a_calibration_concept.ipynb  05b_calibration_overfitting.ipynb  05c_calibration_equifinality.ipynb  07a_sensitivity_tornado.ipynb  07b_uncertainty_envelope.ipynb  calibration_concept.ipynb  calibration_equifinality.ipynb  calibration_overfitting.ipynb
DESIGN_DOCS/: DELIVERABLES.txt  IMPLEMENTATION_CHECKLIST.md  PREREQUISITES.md  README.md  README_NOTEBOOK4_SECTIONS_6-8.md  REVIEW_NOTEBOOK4_SECTIONS_6-8.md  k_averaging_exercise_design.md  (+5 more)
(+384 files in other folders)
